// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AsyncIsolate It should resolve async isolate into the parent 2`] = `
{
  "$type": "URoot",
  "allowReorder": undefined,
  "children": [
    {
      "$type": "UChild_1",
      "allowReorder": undefined,
      "children": [
        {
          "$type": "UGrandChild_1",
          "allowReorder": undefined,
          "children": null,
          "data": {},
          "key": null,
          "keys": null,
          "output": undefined,
          "parent": [Circular],
          "status": "DONE",
        },
        {
          "$type": "UGrandChild_2",
          "allowReorder": undefined,
          "children": null,
          "data": {},
          "key": null,
          "keys": null,
          "output": undefined,
          "parent": [Circular],
          "status": "DONE",
        },
        {
          "$type": "UGrandChild_3",
          "allowReorder": undefined,
          "children": null,
          "data": {},
          "key": null,
          "keys": null,
          "output": undefined,
          "parent": [Circular],
          "status": "DONE",
        },
      ],
      "data": {},
      "key": null,
      "keys": null,
      "output": undefined,
      "parent": [Circular],
      "status": "DONE",
    },
  ],
  "data": {},
  "key": null,
  "keys": null,
  "output": Promise {},
  "parent": null,
  "status": "DONE",
}
`;

exports[`AsyncIsolate It should set the isolate state to pending 1`] = `
{
  "$type": "URoot",
  "allowReorder": undefined,
  "children": null,
  "data": {},
  "key": null,
  "keys": null,
  "output": Promise {},
  "parent": null,
  "status": "PENDING",
}
`;
